# celebrer-dashboard

./: README.md  _50_celebrer.py.example  requirements.txt  setup.cfg
celebrerdashboard/: dashboard.py
celebrerdashboard/cpanel/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
celebrerdashboard/cpanel/templates/cpanel/: index.html
celebrerdashboard/local/: _50_celebrer.py
celebrerdashboard/static/celebrerdashboard/js/: celebrer.js
celebrerdashboard/templates/celebrerdashboard/: base.html
