[metadata]
name = celebrer-dashboard
version = 1.0.0
summary = Celebrer dashboard
description-file = README.md
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Alexey Galkin
author-email = agalkin@mirantis.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    celebrerdashboard